# omnissiah

./: .gitignore  Data_preprocessing.ipynb  README.md  kaggle.ipynb  kaggle_final.ipynb  linear_regression_class.ipynb  logistic_regression.ipynb  media_campaign_cost.ipynb  prepare_data.py  pyproject.toml  train_by_store.ipynb  Д3-4_Омниссия.ipynb  ДЗ2_10.ipynb  ДЗ2_Омниссия.ipynb
fastapi-server/: README.md  data_preprocessor.py  pyproject.toml  server.py  train_and_save_inferences.py
fastapi-server/templates/: predictions_res.html  upload.html
