[tool.poetry]
name = "omnissiah-server"
version = "0.1.0"
description = ""
authors = ["Denis <malyutin.02@bk.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "*"
uvicorn = "*"
joblib = "*"
pandas = "*"
numpy = "*"
scikit-learn = "*"
python-multipart = "*"
jinja2 = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
